--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type": "tsc --project ./tsconfig.json --noEmit",
-    "postinstall": "husky install"
+    "prepare": "husky install",
+    "prepush": "npm run lint && npm run test"
   },
   "dependencies": {
     "husky": "^8.0.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-animated-css": "^1.2.1",
-    "react-animations": "^1.0.0",
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
     "sass": "^1.55.0",
@@ -32,7 +31,7 @@
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
-    "typescript": "4.8.4"
-  },
-  "husky": {}
+    "typescript": "4.8.4",
+    "validate-branch-name": "^1.3.0"
+  }
 }
