--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install",
-    "prepush": "npm run lint && npm run test"
+    "lint": "next lint"
   },
   "dependencies": {
-    "husky": "^8.0.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-animated-css": "^1.2.1",
@@ -29,6 +26,7 @@
     "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
+    "husky": "^8.0.1",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4",
