--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "start": "next start",
     "export": "next export",
     "lint": "next lint",
-    "type": "tsc --project ./tsconfig.json --noEmit",
+    "type": "module",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "jquery": "^3.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-animated-css": "^1.2.1",
@@ -23,6 +24,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "@types/node": "18.11.4",
     "@types/react": "18.0.21",
     "@types/react-animations": "^1.0.0",
