--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "export": "next export",
     "lint": "next lint",
-    "type": "module",
+    "type": "tsc --project ./tsconfig.json --noEmit",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
