--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type": "tsc --project ./tsconfig.json --noEmit"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "jquery": "^3.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
