--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "antd": "^4.24.1",
     "jquery": "^3.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-animated-css": "^1.2.1",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
     "sass": "^1.55.0",
     "slick-carousel": "^1.8.1"
